[package]
name = "gyazo_client"
version = "0.2.7"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Gyazo Client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katayama8000/gyazo-client-rust"
homepage = "https://github.com/katayama8000/gyazo-client-rust/blob/main/README.md"
keywords = ["gyazo", "client", "api", "rust"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"

[dev-dependencies]
tokio = { version = "1.39.3", features = ["full"] }
mockito = "1.5.0"
anyhow = "1.0.86"
