[package]
name = "gyazo_client"
version = "0.2.7"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Gyazo Client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katayama8000/gyazo-client-rust"
homepage = "https://github.com/katayama8000/gyazo-client-rust/blob/main/README.md"
keywords = ["gyazo", "client", "api", "rust"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.129"
thiserror = "1.0.64"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
mockito = "1.5.0"
anyhow = "1.0.90"
