[package]
name = "gyazo_client"
version = "0.2.7"
edition = "2021"
readme = "README.md"
authors = ["katayama8000 <https://github.com/katayama8000>"]
description = "Gyazo Client for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/katayama8000/gyazo-client-rust"
homepage = "https://github.com/katayama8000/gyazo-client-rust/blob/main/README.md"
keywords = ["gyazo", "client", "api", "rust"]
categories = ["web-programming", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
mockito = "1.5.0"
anyhow = "1.0.93"
